--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,18 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Clean workspace
+      run: git clean -fdx
+
+    - name: Remove extra Git configuration
+      run: |
+        git config --local --unset-all http.https://github.com/.extraheader || true
+        git config --local --unset-all core.sshCommand || true
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
 
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean install -X
