--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,31 @@
-name: Build FactionsUUID
+name: Java CI with Maven
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Clean workspace
-      run: git clean -fdx
-
-    - name: Remove extra Git configuration
-      run: |
-        git config --local --unset-all http.https://github.com/.extraheader || true
-        git config --local --unset-all core.sshCommand || true
-
-    - name: Set up JDK 21
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v2
       with:
-        java-version: '21'
+        distribution: 'temurin'  # Add the distribution line
+        java-version: '1.8'
 
     - name: Build with Maven
-      run: mvn clean install -X
+      run: mvn clean package
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: target/
