--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,12 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,14 +17,14 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v2
       with:
-        distribution: 'temurin'  # Add the distribution line
+        distribution: 'temurin'
         java-version: '1.8'
 
     - name: Build with Maven
       run: mvn clean package
 
-    - name: Upload artifact
+    - name: Upload JAR file
       uses: actions/upload-artifact@v2
       with:
-        name: artifact
-        path: target/
+        name: my-app
+        path: target/*.jar
