--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,11 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
@@ -14,11 +16,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up JDK 1.8
+    - name: Set up JDK 21
       uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
-        java-version: '1.8'
+        java-version: '21'
 
     - name: Build with Maven
       run: mvn clean package
@@ -26,5 +28,5 @@ jobs:
     - name: Upload JAR file
       uses: actions/upload-artifact@v2
       with:
-        name: my-app
+        name: factionsuuid
         path: target/*.jar
