--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: mvn clean package
 
     - name: Upload JAR file
-      uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
-        name: artifact
-        path: target/
+        name: my-artifact
+        path: path/to/artifact/ # or path/to/artifact
