--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '21'
 
     - name: Build with Maven
-      run: mvn clean package
+      run: mvn clean install
 
     - name: Upload JAR file
     - uses: actions/upload-artifact@v4
