--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: mvn clean install
 
     - name: Upload JAR file
-    - uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: my-artifact
         path: path/to/artifact/ # or path/to/artifact
