--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
+        distribution: 'temurin' # Specify the distribution here
         java-version: '21'
 
     - name: Build with Maven
