--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       run: mvn clean install
 
     - name: Upload JAR file
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
-        name: my-artifact
-        path: path/to/artifact/ # or path/to/artifact
+        name: factionsuuid
+        path: target/*.jar
+
